@@ -668,14 +668,13 @@ MGMapsCache\macos_12 MGMapsCache\macroad_12 MGMapsCache\macsat_12
 		selection dialog that appears when starting a new atlas (menu <b>Atlas</b>
 		entry <b>New Atlas</b>).<br> As atlases for OSMAND do not support
 		all features provided by Mobile Atlas Creator the following settings
-		are ignored when creating atlases for Osmdroid:
+		are ignored when creating atlases for OSMAND:
 	</p>
 	<ul>
 		<li>Change height or width of the map tiles</li>
 		<li>Name of all layers and maps</li>
 		<li>Structure of the atlas (which maps belongs to which layer)</li>
 	</ul>
-	<!-- *************************************************************************** -->
 	<!-- *************************************************************************** -->
 	<h3>
 		<a name="Osmdroid">Creating atlases for Osmdroid</a>
